--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jsonwebtoken": "^9.0.10",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^16.2.0",
     "next": "15.5.0",
     "react": "19.1.0",
